<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
	<string name="app_name">Roof Monitor</string>
	<!-- BluetoothViewer -->
	<string name="clear">Clear</string>
	<string name="bt_not_enabled">Bluetooth is not enabled. The app cannot function like this.</string>
	<string name="btstatus_connecting_to_fmt">connecting to: %s</string>
	<string name="btstatus_connected_to_fmt">connected to: %s</string>
	<string name="btstatus_not_connected">not connected</string>
	<!-- DeviceListActivity -->
	<string name="scanning">Scanning for devices…</string>
	<string name="select_device">Select a device to connect to</string>
	<string name="none_paired">No paired devices</string>
	<string name="none_found">No device found</string>
	<string name="title_paired_devices">Paired Devices</string>
	<string name="title_other_devices">Other Available Devices</string>
	<string name="button_scan">Scan for devices</string>
	<string name="welcome_sensmaster">Welcome to SensMaster Ison Viewer!</string>
	<string name="get_information_flow">Get Information Flow</string>
	<string name="set_time">Set Time</string>
	<string name="set_log">Set Log</string>
	<string name="get_log">Get Log</string>
	<string name="makeRTF">make RTF</string>
	<string name="show_log">Show Log</string>
	<string name="send_again">Send Again</string>
</resources>
