<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:orientation="horizontal"
    android:rowCount="2" >

    <TextView
        android:id="@+id/status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:padding="5dp"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1" >

        <Button
            android:id="@+id/getlog"
            style="@android:attr/actionModeCloseButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_log" />

        <Button
            android:id="@+id/setlog"
            style="@android:attr/actionModeCloseButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_log" />

        <Button
            android:id="@+id/settime"
            style="@android:attr/actionModeCloseButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_time" />

        <Button
            android:id="@+id/getinfo"
            style="@android:attr/actionModeCloseButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_information_flow" />

        <Button
            android:id="@+id/makeRTF"
            style="@android:attr/actionModeCloseButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/makeRTF" />

        <Button
            android:id="@+id/showlog"
            style="@android:attr/actionModeCloseButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_log" />

        <Button
            android:id="@+id/sendagain"
            style="@android:attr/actionModeCloseButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_again" />

    </LinearLayout>

</GridLayout>